--- a/study/learningnote-day1.html
+++ b/study/learningnote-day1.html
@@ -7,7 +7,7 @@
     <style>
         /* 为整个页面的 body 设置背景图片 */
         body {
-            background-image: url('../开发测试资料/image1.png');
+            background-image: url('../test_inform/image1.png');
             background-size: cover; /* 让背景图片覆盖整个页面 */
             background-repeat: no-repeat; /* 不重复背景图片 */
             background-position: center; /* 图片居中显示 */
