--- a/print_web/home_page.html
+++ b/print_web/home_page.html
@@ -132,9 +132,9 @@
                 <div class="text-2xl font-medium tracking-wider">等 鱼 七</div>
                 <div class="hidden md:flex space-x-12">
                     <a href="#" class="nav-link menu-hover">首页</a>
-                    <a href="#prints" class="nav-link menu-hover">印花系列</a>
-                    <a href="#bags" class="nav-link menu-hover">帆布包</a>
-                    <a href="#about" class="nav-link menu-hover">关于我们</a>
+                    <a href="./print_page.html" class="nav-link menu-hover">印花系列</a>
+                    <a href="./bag_page.html" class="nav-link menu-hover">帆布包</a>
+                    <a href="./about_us.html" class="nav-link menu-hover">关于我们</a>
                 </div>
             </div>
         </div>
@@ -148,11 +148,8 @@
                 <h1 class="text-6xl md:text-7xl font-light mb-8 tracking-wider">等 鱼 七</h1>
                 <p class="text-xl md:text-2xl text-gray-600 mb-12 tracking-wide">独立印花设计工作室</p>
                 <div class="flex justify-center space-x-6">
-                    <a href="#prints" class="px-8 py-3 bg-gray-900 text-white rounded hover:bg-gray-800 transition-colors">
+                    <a href="./print_page.html" class="px-12 py-4 text-xl bg-gray-900 text-white rounded hover:bg-gray-800 transition-colors">
                         探索作品
-                    </a>
-                    <a href="#about" class="px-8 py-3 border border-gray-900 rounded hover:bg-gray-100 transition-colors">
-                        了解更多
                     </a>
                 </div>
             </div>
