--- a/print_web/about_us.html
+++ b/print_web/about_us.html
@@ -28,7 +28,7 @@
     <nav class="fixed w-full z-50 bg-white shadow-sm">
         <div class="container mx-auto px-6">
             <div class="flex justify-between items-center h-20">
-                <a href="/" class="text-2xl font-medium tracking-wider">PRINT ATELIER</a>
+                <a href="/" class="text-2xl font-medium tracking-wider">等 鱼 七</a>
                 <div class="hidden md:flex space-x-12">
                     <a href="./home_page.html" class="hover:text-gray-600 transition-colors">首页</a>
                     <a href="./print_page.html" class="hover:text-gray-600 transition-colors">印花系列</a>
